# Threslogic

./: .gitignore  CMakeLists.txt  README.md  bnn2thres.py
scripts/: bnn2thres.py  showThresDistrubution.py  transform_mnist_data.py
src/: main.cpp
src/common/: arghandler.cpp  arghandler.h  paramhandler.h  util.h
src/logic/: cirGate.h  cirNetwork.cpp  cirNetwork.h  cirThresGate.h  network.cpp  network.h  thresgate.h
src/simulation/: simBnn.cpp  simBnn.h
